<resources>
    <string name="app_name">Chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Зарегистрироваться</string>
    <string name="action_log_in_short">Войти</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>