<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="#476966"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_userL"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:hint="@string/prompt_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@drawable/edit_background"
            >
    </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_signUpL"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_userL">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_email_signUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/edit_background"
        android:hint="@string/prompt_email"
        android:textColor="@color/white"
        android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignUpL"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_signUpL">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/edit_background"
        android:hint="@string/prompt_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUpL"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signSignUp"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/action_sign_up_short"
        android:textColor="@color/white"
        android:background="@drawable/edit_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpL"
        app:layout_constraintVertical_bias="0.123" />

</androidx.constraintlayout.widget.ConstraintLayout>